Correcciones POST Oferta + Publicaciones y Ofertas por Usuario